--- a/athens-bus-app/demo-el.html
+++ b/athens-bus-app/demo-el.html
@@ -10,7 +10,7 @@
         <div class='row'>
             <div class='item'>
                 <div class='text download'>
-                    [ <a href="./apk/athens-bus-app_1.0.0-beta.apk"> Κατέβασμα .apk για εγκατάσταση </a> ]
+                    [ <a href="./apk/athens-bus-app_1.0.1-beta.apk"> Κατέβασμα .apk για εγκατάσταση </a> ]
                 </div>
             </div>
             <div class='item'>
@@ -23,7 +23,7 @@
         <div class='row'>
             <div class='text header'>
                 <img src="./img/icon.png" width='40' />
-                Athens Bus App. (1.0.0-beta)
+                Athens Bus App. (1.0.1-beta)
             </div>
         </div>
 
@@ -98,7 +98,7 @@
                     Στη λίστα με τις αναμενόμενες αφίξεις για κάποια στάση υπάρχει ένα ειδικότερο μενού.
                 </div>
                 <div class='text'>
-                    Η επιλογή 'CLOSE' οδηγεί στην προηγούμενη οθόνη ενώ η επιλογή 'MySTOP' χρησιμοποιείται για τον χαρακτηρισμό ή τον αποχαρακτηρισμό μιας στάσης ως αγαπημένης.
+                    Η επιλογή 'BACK' οδηγεί στην προηγούμενη οθόνη ενώ η επιλογή 'MySTOP' χρησιμοποιείται για τον χαρακτηρισμό ή τον αποχαρακτηρισμό μιας στάσης ως αγαπημένης.
                 </div>
                 <div class='text'>
                     Επιπλέον σε αυτή τη λίστα, οι αφίξεις και οι χρόνοι αναμονής ανανεώνονται αυτόματα κάθε 20 δευτερόλεπτα.
